istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: yelb-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: https-80
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: yelb-ui
spec:
  hosts:
    - "*"
  gateways:
    - yelb-gateway
  http:
    - route:
      - destination:
          host: yelb-exploit.default.svc.cluster.local
          port:
            number: 8080
      match:
        - uri:
            exact: /exploit
      rewrite:
        uri: /            
    - route:
        - destination:
            host: yelb-ui
            port:
              number: 80

---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
spec:
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
